Wed Jan 11 20:06:14 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Changed to use send_buffer_size and rcv_buffer_size in the configuration
          to set the send and receive socket buffer size.

        * dds/DCPS/transport/udp/UdpInst.h:
        * dds/DCPS/transport/udp/UdpInst.cpp:

          Added send_buffer_size and rcv_buffer_size to configuration.

Wed Jan 11 14:03:43 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/DataReaderListener.cpp:

          Changed to use zero copy.

        * tests/DCPS/LargeSample/subscriber.cpp:

          Added line to always indicate how many messages were received, whether
          it is passing or failing.

Tue Jan 10 21:53:41 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Crossplatform/Messenger_run_test.pl:

          Removing redundant indicastion for udp.

Tue Jan 10 21:12:35 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Crossplatform/Messenger_run_test.pl:

          Removing redundant indications for multicast which was
          causing some crossplatform tests to fail.

Thu Jan  5 16:52:57 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/idl/dds_generator.h:

          Added default to switch statement to remove warnings.

Wed Jan  4 18:57:25 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Compiler/idl_test1_lib/FooDef.idl:
        * tests/DCPS/Compiler/idl_test1_main/main.cpp:

          Cleaned-up tests.

        * dds/idl/dds_generator.h:
        * dds/idl/marshal_generator.cpp:
        * dds/idl/metaclass_generator.cpp:

          Fixed problem with handling DOC and TAO2.0 idl
          type structures that are indicated as a AST_*Fwd
          class to be converted to their actual AST_* class.
          [RT# 14991].

Tue Dec 27 23:16:03 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Compiler/idl_test1_lib/FooDef.idl:
